--- a/terraform/main/backend.conf
+++ b/terraform/main/backend.conf
@@ -1,8 +1,5 @@
-bucket         = "bucket-cloud-virtually-primarily-rationally-fit-sailfish"
+bucket         = var.bucket
 key            = "terraform/state"
 region         = "us-east-1"
 encrypt        = true
 dynamodb_table = "dynamo-cloud"
-
-
-
