--- a/.github/workflows/init.yml
+++ b/.github/workflows/init.yml
@@ -11,13 +11,12 @@ jobs:
     environment: aws
     
     env:
-      AWS_DEFAULT_REGION: "us-east-1"
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION}}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-      TF_VAR_aws_region: "us-east-1"
+      TF_VAR_aws_region: ${{ secrets.AWS_REGION}}
       TF_VAR_bucket_name: ${{ secrets.S3_TERRAFORM_STATE_NAME }}
-      TF_VAR_repository_name: "lendaread_ecr_region"
       TF_VAR_dynamodb_table_name: ${{ secrets.DYNAMODB_TERRAFORM_LOCK_NAME }}
 
     steps:
