--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -25,6 +25,8 @@ jobs:
 
   terraform-init:
     runs-on: ubuntu-latest
+    needs: 
+      - extract-tag
     
     env:
       TF_VAR_branch_env: "main" 
